// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`generateLefthookConfig output matches snapshot for python + typescript 1`] = `
"pre-commit:
  commands:
    format-and-stage:
      glob: "*.{ts,tsx,js,jsx,py}"
      run: echo "Format step — configure per language above"
      priority: 1

    ruff-fix:
      glob: "*.py"
      run: ruff check --fix {staged_files} && git add {staged_files}
      stage_fixed: true
      priority: 1

    biome-fix:
      glob: "*.{ts,tsx,js,jsx}"
      run: biome check --write {staged_files} && git add {staged_files}
      stage_fixed: true
      priority: 1

    gitleaks:
      run: gitleaks protect --staged --no-banner
      fail_text: "Potential secrets detected"
      priority: 2

    codespell:
      glob: "*.{ts,md,txt,yaml,yml,toml,json,py,go,rs}"
      exclude: "tests/fixtures/.*"
      run: codespell --check-filenames {staged_files}
      fail_text: "Spell errors found"
      priority: 2

    markdownlint:
      glob: "*.md"
      run: markdownlint-cli2 {staged_files}
      fail_text: "Markdown lint errors found"
      priority: 2

    no-commits-to-main:
      run: |
        branch=$(git rev-parse --abbrev-ref HEAD)
        if [ "$branch" = "main" ] || [ "$branch" = "master" ]; then
          echo "Direct commits to main are not allowed"
          exit 1
        fi
      fail_text: "Do not commit directly to main"
      priority: 2

commit-msg:
  commands:
    conventional:
      run: grep -qE "^(feat|fix|docs|style|refactor|perf|test|build|ci|chore|revert)(\\(.+\\))?!?:" {1}
      fail_text: "Commit message must follow Conventional Commits format"
"
`;

exports[`generateLefthookConfig output matches snapshot for empty plugins 1`] = `
"pre-commit:
  commands:

    gitleaks:
      run: gitleaks protect --staged --no-banner
      fail_text: "Potential secrets detected"
      priority: 2

    codespell:
      glob: "*.{ts,md,txt,yaml,yml,toml,json,py,go,rs}"
      exclude: "tests/fixtures/.*"
      run: codespell --check-filenames {staged_files}
      fail_text: "Spell errors found"
      priority: 2

    markdownlint:
      glob: "*.md"
      run: markdownlint-cli2 {staged_files}
      fail_text: "Markdown lint errors found"
      priority: 2

    no-commits-to-main:
      run: |
        branch=$(git rev-parse --abbrev-ref HEAD)
        if [ "$branch" = "main" ] || [ "$branch" = "master" ]; then
          echo "Direct commits to main are not allowed"
          exit 1
        fi
      fail_text: "Do not commit directly to main"
      priority: 2

commit-msg:
  commands:
    conventional:
      run: grep -qE "^(feat|fix|docs|style|refactor|perf|test|build|ci|chore|revert)(\\(.+\\))?!?:" {1}
      fail_text: "Commit message must follow Conventional Commits format"
"
`;
